--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,28 @@ header{
 }
 
 h1{
-	font-size:10rem;
-	font-family: 'Red Hat Display', sans-serif;
+	font-size:8rem;
+	font-family: 'Poppins', sans-serif;
+	background-color:#000000;
+}
+.intro h1{
+	text-align:center;
+	justify-content:center;
+	top:50%;
+	height:100vh;
+	width:100%;
+	text-transform:uppercase;
+	font-size:25vw;
+	font-weight:800;
+	mix-blend-mode:multiply;
 }
 h2{
-	font-size:5rem;
+	font-size:4.5rem;
 	font-family:'Red Hat Display', sans-serif;
 }
 .cardtext h2{
 	transform-origin:2 2;
-	transform:rotate(90deg) translate(30%,70%);
+	transform:rotate(90deg) translate(35%,80%);
 }
 header h4 {
 	position:absolute;
@@ -54,6 +66,7 @@ header h4 {
 	min-height:100%;
 	width:auto;
 	height:auto;
+	object-fit:cover;
 
 	
 }
