--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ h2{
 	font-family:'Red Hat Display', sans-serif;
 }
 .cardtext h2{
-	transform-origin:2 2;
+transform-origin:2% 2%;
 	transform:rotate(90deg) translate(35%,80%);
 }
 header h4 {
