--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header{
 h1{
 	font-size:8rem;
 	font-family: 'Poppins', sans-serif;
-	background-color:#000000;
+	background-color:black;
 }
 .intro h1{
 	text-align:center;
@@ -29,18 +29,18 @@ h1{
 	height:100vh;
 	width:100%;
 	text-transform:uppercase;
-	font-size:25vw;
+	font-size:40vw;
 	font-weight:800;
 	mix-blend-mode:multiply;
 }
 h2{
-	font-size:4.5rem;
+	font-size:2vw;
 	font-family:'Red Hat Display', sans-serif;
 }
 .cardtext h2{
 	text-align:left;
 	transform-origin:10% 10%;
-transform:rotate(90deg) translate(10%,-50%);
+	transform:rotate(90deg) translate(10%,-50%);
 }
 header h4 {
 	position:absolute;
@@ -128,7 +128,7 @@ header h4 {
 
 body {
   font-family: system-ui;
-  background: #f1dac4;
+  background: #CBC3E3;
   color: black;
   height: 100vh;
   text-align: center;
@@ -196,36 +196,36 @@ section{
 	max-height:100%;
 }
 
-.card:nth-child(1){
-  transform:translate(240%,30%) rotate(-20deg);
-}
 
 .card-container:hover >.card:nth-child(1){
-  transform:translate(85%,20%) rotate(0deg);
+  transform:translate(20vw,3vw) rotate(0deg);
 }
 
 .card-container:hover >.card:nth-child(2){
-  transform:translate(188%,20%) rotate(0deg);
+  transform:translate(40vw,3vw) rotate(0deg);
 }
 
 .card-container:hover >.card:nth-child(3){
-  transform:translate(291%,20%) rotate(0deg);
+  transform:translate(60vw,3vw) rotate(0deg);
 }
 
 .card-container:hover >.card:nth-child(4){
-  transform:translate(394%,20%) rotate(0deg);
+  transform:translate(80vw,20%) rotate(0deg);
+}
+.card:nth-child(1){
+  transform:translate(50vw,4vw) rotate(-20deg);
 }
 
 .card:nth-child(2){
-  transform:translate(260%,28%) rotate(-10deg);
+  transform:translate(53vw,4vw) rotate(-10deg);
 }
 
 .card:nth-child(3){
-  transform:translate(280%,26%) rotate(0);
+  transform:translate(56vw,4vw) rotate(0);
 }
 
 .card:nth-child(4){
-  transform:translate(310%,28%) rotate(7deg);
+  transform:translate(60vw,4vw) rotate(7deg);
 }
 
 /* ABOUT */
